--- a/index.html
+++ b/index.html
@@ -16,9 +16,27 @@
       <table id="user-table" class="user-table">
         <thead>
           <tr id="th">
-            <th style="border-top-right-radius: 0">SPILLER</th>
-            <th style="border-top-right-radius: 0; border-top-left-radius: 0">STATUS</th>
-            <th style="border-top-right-radius: 0; border-top-left-radius: 0">RANK</th>
+            <th style="border-top-right-radius: 0">
+              SPILLER
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="14" height="14">
+                <path fill="none" d="M0 0H24V24H0z" />
+                <path d="M20 4v12h3l-4 5-4-5h3V4h2zm-8 14v2H3v-2h9zm2-7v2H3v-2h11zm0-7v2H3V4h11z" fill="rgba(255,255,255,1)" />
+              </svg>
+            </th>
+            <th style="border-top-right-radius: 0; border-top-left-radius: 0">
+              STATUS
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="14" height="14">
+                <path fill="none" d="M0 0H24V24H0z" />
+                <path d="M20 4v12h3l-4 5-4-5h3V4h2zm-8 14v2H3v-2h9zm2-7v2H3v-2h11zm0-7v2H3V4h11z" fill="rgba(255,255,255,1)" />
+              </svg>
+            </th>
+            <th style="border-top-right-radius: 0; border-top-left-radius: 0">
+              RANK
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="14" height="14">
+                <path fill="none" d="M0 0H24V24H0z" />
+                <path d="M20 4v12h3l-4 5-4-5h3V4h2zm-8 14v2H3v-2h9zm2-7v2H3v-2h11zm0-7v2H3V4h11z" fill="rgba(255,255,255,1)" />
+              </svg>
+            </th>
             <!-- <th style="border-top-right-radius: 0; border-top-left-radius: 0">FAMILIE/GJENG</th>
             <th style="border-top-right-radius: 0; border-top-left-radius: 0">UTFORDRINGER</th>
             <th style="border-top-right-radius: 0; border-top-left-radius: 0">ELITESCORE</th>
