--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </head>
   <body>
     <div class="container">
+      <div class="search">
+        <input type="text" placeholder="Brukernavn" />
+      </div>
       <table id="user-table" class="user-table">
         <thead>
           <tr id="th">
@@ -38,9 +41,9 @@
               </svg>
             </th>
             <!-- <th style="border-top-right-radius: 0; border-top-left-radius: 0">FAMILIE/GJENG</th>
-            <th style="border-top-right-radius: 0; border-top-left-radius: 0">UTFORDRINGER</th>
-            <th style="border-top-right-radius: 0; border-top-left-radius: 0">ELITESCORE</th>
-            <th style="border-top-left-radius: 0">PENGER</th> -->
+              <th style="border-top-right-radius: 0; border-top-left-radius: 0">UTFORDRINGER</th>
+              <th style="border-top-right-radius: 0; border-top-left-radius: 0">ELITESCORE</th>
+              <th style="border-top-left-radius: 0">PENGER</th> -->
           </tr>
         </thead>
         <tbody></tbody>
