--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <div class="search">
-        <input type="text" placeholder="Søk..." />
+        <input type="text" placeholder="" />
       </div>
       <table id="user-table" class="user-table">
         <thead>
