--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
                 <path d="M20 4v12h3l-4 5-4-5h3V4h2zm-8 14v2H3v-2h9zm2-7v2H3v-2h11zm0-7v2H3V4h11z" fill="rgba(255,255,255,1)" />
               </svg>
             </th>
-            <!-- <th style="border-top-right-radius: 0; border-top-left-radius: 0">FAMILIE/GJENG</th>
-              <th style="border-top-right-radius: 0; border-top-left-radius: 0">UTFORDRINGER</th>
-              <th style="border-top-right-radius: 0; border-top-left-radius: 0">ELITESCORE</th>
-              <th style="border-top-left-radius: 0">PENGER</th> -->
+            <th style="border-top-right-radius: 0; border-top-left-radius: 0">HOTELL TID</th>
           </tr>
         </thead>
         <tbody></tbody>
